syntax = "proto3";

option csharp_namespace = "gRPC_TokenProvider.Protos";

package authentication;

service Authentication {
	rpc GetTokenJWT (UserRequest) returns (TokenReply);
}

message UserRequest {
	string name = 1;
	string password = 2;
}

message TokenReply {
	string token = 1;
}